--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -23,6 +23,41 @@
   padding-left: 2rem;
   padding-top: 3.5rem;
 }
+.footer {
+  background-color: var(--midnight);
+  font-family: "Epilogue", sans-serif;
+  font-weight: 300;
+  line-height: 1.5rem;
+  color: var(--brightBlue);
+  padding-left: 2rem;
+  padding-right: 3rem;
+  padding-block: 4rem;
+
+  h2 {
+    color: var(--brightBlue);
+    font-family: "Playfair Display", serif;
+    margin-bottom: 2rem;
+  }
+}
+
+.footerContent {
+  margin-block: 2rem;
+}
+.footerLogo {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  margin-top: 1.5rem;
+  a {
+    color: white;
+    text-decoration: underline;
+  }
+  img {
+    width: 36px;
+    aspect-ratio: var(--ratio-square);
+    margin-top: 3em;
+  }
+}
 
 // ----------------
 // ---- PANES -----
@@ -77,10 +112,6 @@
   margin-bottom: 2rem;
 }
 
-// .pane:last-of-type {
-//   height: 100vh;
-// }
-
 .tan {
   background-color: var(--motelLight);
   color: var(--roseRed);
@@ -114,8 +145,13 @@
   margin-right: calc(20% - 2rem);
 }
 
+// ---------------
+// TABLET --------
+// ---------------
+
 @media screen and (min-width: 670px) {
-  .nonBioTitle {
+  .nonBioTitle,
+  .footerContent {
     margin-left: calc(20% - 2rem);
   }
 
@@ -135,8 +171,13 @@
   }
 }
 
+// ---------------
+// LAPTOP --------
+// ---------------
+
 @media screen and (min-width: 1024px) {
-  .nonBioTitle {
+  .nonBioTitle,
+  .footerContent {
     margin-left: calc(30% - 2rem);
   }
 
