first attempt at 1x4

--- a/components/PhotoGrid/PhotoGrid.module.scss
+++ b/components/PhotoGrid/PhotoGrid.module.scss
@@ -5,16 +5,17 @@
 .gridContainer {
   display: grid;
   grid-template-rows: auto;
-  grid-template-columns: 85%;
-  gap: 1rem;
-  justify-content: center;
+  grid-template-columns: repeat(2, 1fr);
+  width: 95%;
+  margin-inline: auto;
+  gap: 0.5rem;
 }
 
 @media screen and (min-width: 426px) {
   .gridContainer {
-    grid-template-columns: repeat(2, 1fr);
     width: 85%;
     margin-inline: auto;
+    gap: 1rem;
   }
 }
 
