--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -62,6 +62,7 @@
 // ----------------
 // ---- PANES -----
 // ----------------
+
 .pane {
   padding-block: 10rem;
   display: grid;
@@ -104,15 +105,8 @@
   }
 }
 
-.nonBio {
-  height: 100vh !important;
-}
-
-.nonBioTitle {
-  margin-bottom: 2rem;
-}
-
-.tan {
+// DARK
+.pane:nth-of-type(even) {
   background-color: var(--motelLight);
   color: var(--roseRed);
 
@@ -126,7 +120,8 @@
   }
 }
 
-.dark {
+// TAN
+.pane:nth-of-type(odd) {
   background-color: var(--midnight);
   color: var(--brightBlue);
 
@@ -138,10 +133,19 @@
     color: var(--midnight);
   }
 }
+
+.nonBio {
+  height: 100vh !important;
+}
+
+.nonBioTitle {
+  margin-bottom: 2rem;
+}
+
 .showMore {
   border-radius: 6px;
   padding: 0.5rem 1rem;
-  margin-left: auto;
+  margin-left: 2rem;
   margin-right: calc(20% - 2rem);
 }
 
@@ -150,6 +154,44 @@
 // ---------------
 
 @media screen and (min-width: 670px) {
+  // ---------------
+  // DESKTOP BIO ---
+  // ---------------
+  .desktopBio {
+    display: grid;
+    grid-template-columns: 1fr !important;
+    row-gap: 8rem;
+
+    .profilePicture {
+      margin-left: 0;
+    }
+  }
+
+  .horizontalBio {
+    width: 90%;
+    margin-inline: auto;
+
+    .paneTextContainer {
+      width: 100% !important;
+      display: grid !important;
+      align-items: flex-start;
+      grid-template-columns: 4fr 5fr;
+    }
+
+    .profilePicture {
+      margin: 0 !important;
+    }
+
+    h2 {
+      margin-bottom: 1rem;
+    }
+
+    h2,
+    p {
+      margin-left: 0 !important;
+    }
+  }
+
   .nonBioTitle,
   .footerContent {
     margin-left: calc(20% - 2rem);
@@ -161,7 +203,7 @@
     }
 
     .profilePicture {
-      width: max(35vw, 35rem);
+      width: 100%;
       margin-left: 15%;
     }
 
@@ -176,23 +218,44 @@
 // ---------------
 
 @media screen and (min-width: 1024px) {
+  .desktopBio {
+    grid-template-columns: repeat(2, 1fr) !important;
+
+    .paneTextContainer {
+      grid-template-columns: 3fr 5fr;
+    }
+  }
+  
   .nonBioTitle,
   .footerContent {
     margin-left: calc(30% - 2rem);
   }
-
+  
   .pane {
     .paneTitle {
       margin-left: calc(25% - 2rem);
     }
-
+    
     .profilePicture {
-      width: max(35vw, 35rem);
+      width: 100%;
       margin-left: 25%;
     }
-
+    
     p {
       margin-left: 35%;
+    }
+  }
+}
+
+// ---------------
+// LARGE-LAPTOP --
+// ---------------
+@media screen and (min-width: 1440px) {
+  .desktopBio {
+    grid-template-columns: repeat(2, 1fr) !important;
+
+    .paneTextContainer {
+      grid-template-columns: 4fr 5fr;
     }
   }
 }
