--- a/components/TrailerSection/TrailerSection.module.scss
+++ b/components/TrailerSection/TrailerSection.module.scss
@@ -1,10 +1,20 @@
 .trailerBox {
   aspect-ratio: var(--ratio-widescreen);
+  width: 95%;
+  margin-inline: auto;
+}
+.trailerTitleContainer {
   width: 85%;
   margin-inline: auto;
 }
-@media screen and (min-width: 769px){
-  .trailerBox{
+
+.trailerTitle {
+  padding-left: 0 !important;
+  margin-bottom: 2rem;
+}
+
+@media screen and (min-width: 769px) {
+  .trailerBox, .trailerTitleContainer {
     width: 60%;
   }
 }
